# booster_native_sdk_lab

./: .gitignore  CMakeLists.txt  Modelfile.roleplay  README.md  booster-native-sdk-lab.service
scripts/: fake_bytedance_openai_asr.py  install_lui_openai_redirect.sh  install_lui_openspeech_intercept.sh  install_lui_ssl_payload_capture.sh  install_rtc_ssl_payload_capture.sh  local_llm_tts.py  moonshine_asr_daemon.py  openai_asr_daemon.py  openai_realtime_call.py  openai_robot_voice.py  openai_text_chat.py  openai_vision.py  openspeech_tcp_relay.py  restore_lui_openai_redirect.sh  restore_lui_openspeech_intercept.sh  restore_lui_ssl_payload_capture.sh  restore_rtc_ssl_payload_capture.sh  ros_camera_frame.py  ros_rtc_tts.py  whisperlive_asr_daemon.py
src/: main.cpp  moonshine_asr_daemon.cpp  moonshine_speaker_embedding_stub.cpp  simplechat_service.cpp
tools/: extract_lui_pcm_wav.py  lui_asr_probe.cpp  lui_ssl_payload_logger.c  parse_lui_ssl_payload.py
web/: app.js  index.html  styles.css
